samples/_failures_safe/1761326734_e4c4f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e653d700.c: In function ‘main’:
./samples/SAFE/__tmp_e653d700.c:143:12: error: missing terminating " character
  143 |     printf("Enter log entries (format:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e653d700.c:143:5: error: expected expression at end of input
  143 |     printf("Enter log entries (format:
      |     ^~~~~~
./samples/SAFE/__tmp_e653d700.c:143:5: error: expected declaration or statement at end of input
